frontend/src/components/icons/health-icons.module.css
.health,
.sanity {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  line-height: 1;
  border-radius: var(--rounded);
  width: calc(2.2 * var(--card-text-size, var(--text-sm)));
  height: calc(2.2 * var(--card-text-size, var(--text-sm)));
}

.health {
  background-color: #ad1a23; /* normal red */
  color: #8b151c; /* dark red */
}

.sanity {
  background-color: #579dab; /* dark blue/teal */
  color: #6dacad; /* normal blue/teal for progress */
}

.icon-base {
  position: relative;
  font-size: calc(1.5 * var(--card-text-size, var(--text-sm)));
  z-index: 2;
}

.icon-background {
  display: none;
}

.icon-cost {
  position: relative;
  font-size: 1.1em;
  color: var(--white);
  font-weight: 600;
  z-index: 3;
  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
  display: flex;
  align-items: center;
  justify-content: center;

  /** Chrome < 123 has a bug with paint-order, but lists is as supported. We use a feature with similar browser support as proxy check */
  @supports (text-wrap-style: balance) {
    -webkit-text-fill-color: var(--white);
    -webkit-text-stroke: 1.5px #000;
    color: currentColor;
    paint-order: stroke fill;
  }
}

.icon-cost-wrapper {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 3;
}

.icon-ranger {
  font-size: 0.9em;
  color: var(--white);
  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);

  @supports (text-wrap-style: balance) {
    -webkit-text-fill-color: var(--white);
    -webkit-text-stroke: 1px #000;
    color: currentColor;
    paint-order: stroke fill;
  }
}

.icon-per-ranger {
  font-size: 0.65em;
  margin-left: 0.05em;
  transform: translateY(0.35em);
  color: var(--white);
  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);

  /** Chrome < 123 has a bug with paint-order, but lists is as supported. We use a feature with similar browser support as proxy check */
  @supports (text-wrap-style: balance) {
    -webkit-text-fill-color: var(--white);
    -webkit-text-stroke: 1px #000;
    color: currentColor;
    paint-order: stroke fill;
  }
}

